[package]
name = "pscf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
#flip-link = "0.1.7"
#hd44780-driver = "0.4.0"

#**
[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f411"]







